<resources>
    <string name="app_name">AndroidT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="to_login_activity">跳转到LoginActivity</string>
    <array name="day_of_week">
        <item>aaa</item>
        <item>bbb</item>
        <item>ccc</item>
    </array>
    <string name="title_activity_okhttp">OkhttpActivity</string>

    <string name="hello_blank_fragment">fragment one</string>
    <string name="fragment_one">one</string>
    <string name="fragment_two">two</string>
    <string name="fragment_three">three</string>
    <string name="fragment_four">four</string>
    <string name="constraint_banner">banner</string>
    <string name="constraint_hello">亲爱的朋友您好！</string>
    <string name="constraint_hid_name">小妞来输入啊</string>
    <string name="constraint_name">用户名：</string>
    <string name="constract_psw">密码：</string>
    <string name="constraint_login">登录</string>
    <string name="constraint_cancel">取消</string>
    <string name="constraint_content">ad发送到发送到发斯蒂芬斯蒂芬卡萨两地分居萨拉丁快乐撒打飞机拉上看到过阿里斯顿解放啦斯柯达解放路撒快点放假阿萨德飞机爱上了对方空间撒地方撒旦法地方撒地方萨迪克垃圾分类萨克的姐夫卢卡斯</string>
    <string name="page_up">上一页</string>
    <string name="page_down">下一页</string>
    <string name="loading">加载中请稍后…</string>
    <string name="revert">Revert</string>
    <string name="delete">Delete</string>
    <string name="manage">Manage</string>
    <string name="call">Call</string>
    <string name="add">Add</string>
    <string name="camera">Camera</string>
    <string name="edit">Edit</string>
    <string name="email">zhangzhiyagongzuo@163.com</string>
    <string name="username">kaixinzzy</string>
    <string name="long_content">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
</resources>
