<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 单选 android:checkableBehavior="single" -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/call"/>
        <item
            android:id="@+id/nav_add"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/add"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/camera"/>
        <item
            android:id="@+id/nav_edit"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/edit"/>
    </group>
</menu>